--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # 使用cron表达式定义任务运行的时间
     # github使用utc时间
-    - cron: "0 12 17 * *"  #每月17号12点执行一次
+    - cron: "30 2 * * mon"  #每星期一2点30分启动一次
   workflow_dispatch:
 
 jobs:
